Support for Emoji version 14.0