@@ -7,7 +7,7 @@
     <parent>
         <groupId>com.gluonhq.chatapp</groupId>
         <artifactId>chatapp</artifactId>
-        <version>1.1.2</version>
+        <version>1.1.3-SNAPSHOT</version>
     </parent>
 
     <properties>
@@ -55,6 +55,35 @@
                     </options>
                     <mainClass>${mainClassName}</mainClass>
                 </configuration>
+                <executions>
+                    <execution>
+                        <!-- Default configuration for running -->
+                        <id>default-cli</id>
+                        <configuration>
+                            <mainClass>${mainClassName}</mainClass>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <!-- Configuration for debugging -->
+                        <id>debug</id>
+                        <configuration>
+                            <options>
+                                <arg>--add-opens</arg>
+                                <arg>javafx.graphics/javafx.scene.text=richtextfx</arg>
+                                <arg>--add-opens</arg>
+                                <arg>javafx.graphics/com.sun.javafx.text=richtextfx</arg>
+                                <arg>--add-opens</arg>
+                                <arg>javafx.graphics/com.sun.javafx.scene.text=richtextfx</arg>
+                                <arg>--add-opens</arg>
+                                <arg>javafx.graphics/com.sun.javafx.geom=richtextfx</arg>
+                                <arg>--add-opens</arg>
+                                <arg>javafx.graphics/com.sun.javafx.css=org.controlsfx.controls</arg>
+                                <option>-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=*:8000</option>
+                            </options>
+                            <mainClass>${mainClassName}</mainClass>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
@@ -63,12 +92,12 @@
         <dependency>
             <groupId>com.gluonhq.chatapp</groupId>
             <artifactId>EmojiData</artifactId>
-            <version>1.1.2</version>
+            <version>1.1.3-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.gluonhq.chatapp</groupId>
             <artifactId>EmojiPopOver</artifactId>
-            <version>1.1.2</version>
+            <version>1.1.3-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.controlsfx</groupId>
